facet-json/tests/snapshots/diagnostics__error_at_start_of_input.snap
---
source: tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::unexpected_token[0m

  [31m×[0m unexpected token: got EOF, expected scalar value
   ╭────
   ╰────
