facet-json/tests/snapshots/diagnostics__error_with_unicode_content.snap
---
source: tests/diagnostics.rs
assertion_line: 186
expression: render_error(&err)
---
[31mjson::token[0m

  [31m×[0m unexpected character: 'n' (while parsing i32)
   ╭────
 [2m1[0m │ {"emoji": "🎉", "value": nope}
   · [35;1m                         ──┬─[0m
   ·                            [35;1m╰── [35;1munexpected 'n', expected i32[0m[0m
   ╰────
