facet-json/tests/snapshots/diagnostics__semantic_error_trailing_data.snap
---
source: tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::token[0m

  [31m×[0m unexpected character: 'e'
