facet-json/tests/snapshots/diagnostics__semantic_error_tuple_wrong_size.snap
---
source: tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::unexpected_token[0m

  [31m×[0m unexpected token: got ,, expected ']'
   ╭────
 [2m1[0m │ [1, 2, 3]
   · [35;1m     ┬[0m
   ·      [35;1m╰── [35;1mexpected ']', got ','[0m[0m
   ╰────
