facet-json/tests/snapshots/diagnostics__semantic_error_wrong_type_for_array.snap
---
source: tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::unexpected_token[0m

  [31m×[0m unexpected token: got "not an array", expected '['
   ╭────
 [2m1[0m │ {"items": "not an array"}
   · [35;1m          ───────┬──────[0m
   ·                  [35;1m╰── [35;1mexpected '[', got '"not an array"'[0m[0m
   ╰────
