facet-json/tests/snapshots/diagnostics__syntax_error_unexpected_brace.snap
---
source: tests/diagnostics.rs
expression: render_error(&err)
---
[31mjson::unexpected_token[0m

  [31m×[0m unexpected token: got }, expected scalar value
   ╭────
 [2m1[0m │ }
   · [35;1m┬[0m
   · [35;1m╰── [35;1mexpected scalar value, got '}'[0m[0m
   ╰────
