facet-json/tests/snapshots/diagnostics__syntax_error_with_context.snap
---
source: tests/diagnostics.rs
assertion_line: 52
expression: render_error(&err)
---
[31mjson::token[0m

  [31m×[0m unexpected character: '@' (while parsing i32)
   ╭────
 [2m1[0m │ {"name": "test", "value": @invalid}
   · [35;1m                          ┬[0m
   ·                           [35;1m╰── [35;1munexpected '@', expected i32[0m[0m
   ╰────
